<resources>
    <string name="app_name">PracticaFinal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_equipo_local">Seleccionar equipo local</string>
    <string name="prompt_equipo_visitante">Seleccionar equipo visitante</string>
    <string name="hint_nombre_equipo">Nombre del equipo</string>
    <string name="hint_entrenador">Entrenador</string>
    <string name="hint_nombre_jugador">Nombre del jugador</string>
    <string name="hint_numero_dorsal">Número de dorsal</string>
    <string name="boton_anadir_jugador">Añadir jugador</string>
    <string name="jugadores_anadidos">Jugadores añadidos:</string>
    <string name="hint_numero_jornada">Número de jornada</string>
    <string name="texto_partido_jugado">¿Partido jugado?</string>
    <string name="texto_si">Sí</string>
    <string name="texto_no">No</string>
    <string name="hint_seleccionar_fecha">Seleccionar fecha</string>
    <string name="hint_puntos_local">Puntos local</string>
    <string name="hint_puntos_visitante">Puntos visitante</string>
    <string name="configuracion">Configuración</string>
    <string name="boton_anadir_equipo">Añadir equipo</string>
    <string name="boton_borrar_equipo">Borrar equipo</string>
    <string name="boton_anadir_partido">Añadir partido</string>
    <string name="boton_borrar_partido">Borrar partido</string>
    <string name="boton_idioma_ingles">Inglés</string>
    <string name="volver">Volver</string>
    <string name="nombre_equipo">Nombre del equipo</string>
    <string name="entrenador">Entrenador</string>
    <string name="logo_equipo">Logo del equipo</string>
    <string name="temporada_actual">Temporada 24/25</string>
    <string name="anterior_jornada">Anterior jornada</string>
    <string name="siguiente_jornada">Siguiente jornada</string>
    <string name="jornada_1">Jornada 1</string>
    <string name="nombre_jugador">Nombre del Jugador</string>
    <string name="posicion_jugador">Posición</string>
    <string name="numero_jugador">Dorsal</string>
    <string name="equipo_local">Equipo Local</string>
    <string name="vs">vs</string>
    <string name="equipo_visitante">Equipo Visitante</string>
</resources>